gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail21928.d
version https://git-lfs.github.com/spec/v1
oid sha256:ed6eaa2ebf7883a449aa3ec006ed02cb710a5f6a724914e74f937a8ac933f5d0
size 256
